# GestaoDeDados

./: .gitignore  LICENSE  README.md  download_data.sh
infra/: Makefile
infra/airflow/: Dockerfile  ingestion_dependency.sh  init_datawarehouse.sql  pyproject.toml  schema_microdados_censo.csv  setup.py  setup.sh
infra/airflow/config/: airflow.cfg
infra/airflow/dags/: multidimensional_data_ies_baixada_cuiabana.py
infra/open_metadata/: Makefile
infra/open_metadata/custom-connector/: setup.py
infra/open_metadata/custom-connector/airflow/: Dockerfile  docker-compose.yaml  pyproject.toml
infra/open_metadata/custom-connector/connector/: csv_connector.py
infra/open_metadata/custom-connector/docker/: Dockerfile  docker-compose.yml
metadata/: classificacao_educacao.csv  glossario_educacao.csv
