[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["SousaPedroso <contato.gabrieldesousagp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
pandas = "2.0.3"
apache-airflow = "2.7.3"
python-dotenv = "^1.0.1"
openmetadata-ingestion = {version = "1.4.4.1", extras = ["postgres"]}
openmetadata-managed-apis = "1.4.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
