[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["SousaPedroso <contato.gabrieldesousagp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.3"
pandas = "^2.2.3"
apache-airflow = "2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
